Changes regarding the layout issue

--- a/apps/ptg-react-app/src/app/examples/chatbot/Chat.css
+++ b/apps/ptg-react-app/src/app/examples/chatbot/Chat.css
@@ -89,7 +89,7 @@
   position: relative;
   margin-bottom: 15px;
 }
-input[type='text'] {
+.chatbot-input[type='text'] {
   flex: 1;
   padding: 10px;
   border: 1px solid #222;
@@ -99,9 +99,10 @@ input[type='text'] {
   background-color: black;
   color: white;
 }
-input[type='file'] {
+.chatbot-input[type='file'] {
   display: none;
 }
+
 .uploadIcon {
   cursor: pointer;
   margin-right: 10px;
